Working util.py w/tests

--- a/DockerFR/Docker/Dockerfile
+++ b/DockerFR/Docker/Dockerfile
@@ -1,15 +1,27 @@
 FROM yjyoo3312/myptapi
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1 \
+    TF_USE_LEGACY_KERAS=1
 
 WORKDIR /app
 
-RUN python -m pip install --upgrade pip
+# Install system dependencies for OpenCV and InsightFace
+RUN apt-get update && apt-get install -y \
+    libglib2.0-0 \
+    libgl1-mesa-glx \
+    && rm -rf /var/lib/apt/lists/*
 
+# Upgrade pip and install Python dependencies
+RUN python -m pip install --upgrade pip
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Verify RetinaFace installation
+RUN wget https://raw.githubusercontent.com/serengil/retinaface/master/tests/dataset/img3.jpg -O img3.jpg
+RUN python3 -c "from retinaface import RetinaFace; RetinaFace.detect_faces('img3.jpg')"
+
+# Copy application files
 COPY main.py util.py ./
 
 EXPOSE 5000
